[gd_scene load_steps=15 format=3 uid="uid://4gnc4coty71j"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_f05js"]
[ext_resource type="PackedScene" uid="uid://b5kwsmxglfbp6" path="res://Scenes/UI.tscn" id="2_sfx10"]
[ext_resource type="Script" path="res://Scripts/YamsManager.gd" id="3_ounvy"]
[ext_resource type="Texture2D" uid="uid://b5cwnsigjnr0o" path="res://tilesets/terrain.png" id="4_e4dkg"]
[ext_resource type="PackedScene" uid="uid://rtuageh4fjhm" path="res://Scenes/Units/Soldier.tscn" id="5_vqr24"]
[ext_resource type="PackedScene" uid="uid://b5tp2dhwh1sjy" path="res://Scenes/Units/Archer.tscn" id="7_5k768"]
[ext_resource type="PackedScene" uid="uid://drdr6dkao3hnd" path="res://Scenes/Units/Mage.tscn" id="7_e1n3n"]
[ext_resource type="PackedScene" uid="uid://cmu6gp2op0k0a" path="res://Scenes/Units/Paladin.tscn" id="8_08tlg"]
[ext_resource type="PackedScene" uid="uid://d3n7ohhq5ufa0" path="res://Scenes/Units/Bard.tscn" id="9_pydge"]
[ext_resource type="PackedScene" uid="uid://cur0ovc2dvg2t" path="res://Scenes/Units/Loup.tscn" id="10_3u7ec"]
[ext_resource type="Script" path="res://Scripts/Units/Loup.gd" id="11_w0phj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8abaa"]
texture = ExtResource("4_e4dkg")
0:0/0 = 0
1:1/0 = 0
0:1/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_me2jq"]
sources/0 = SubResource("TileSetAtlasSource_8abaa")

[sub_resource type="Curve2D" id="Curve2D_lxoc7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, -200, 8.18504, 0, -8.18504, 0, -128, -200, 0, 0, 0, 0, -136, -208, 0.0625, 8, -0.0625, -8, -136, -272, 0, 0, 0, 0, -144, -280, 0, 0, 0, 0, -304, -280, 0, -7.95325, 0, 7.95325, -312, -272, 0, 0, 0, 0, -312, -176, 7.9375, 0.0625, -7.9375, -0.0625, -320, -168, 8.05292, 0.0153078, -8.05292, -0.0153078, -528, -168, 0, 0, 0, 0, -536, -176, 0, 0, 0, 0, -536, -376)
}
point_count = 12

[node name="Main" type="Node"]
script = ExtResource("1_f05js")

[node name="UI" parent="." instance=ExtResource("2_sfx10")]

[node name="YamsManager" type="Node" parent="."]
script = ExtResource("3_ounvy")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 16)
tile_set = SubResource("TileSet_me2jq")
format = 2
layer_0/tile_data = PackedInt32Array(-1507369, 0, 0, -1441832, 0, 0, -1376295, 0, 0, -1310758, 0, 0, -1310757, 0, 0, -1245220, 0, 0, -1114146, 65536, 1, -1048609, 0, 0, -983072, 0, 0, -917535, 0, 0, -917534, 0, 0, -851997, 0, 0, -851996, 0, 0, -786459, 0, 0, -786458, 0, 0, -720921, 65536, 1, -720920, 65536, 1, -655383, 0, 0, -655382, 0, 0, -589845, 0, 0, -589844, 0, 0, -524307, 0, 0, -524306, 0, 0, -524305, 0, 0, -458768, 0, 0, -458767, 0, 0, -393230, 0, 0, -393229, 0, 0, -393228, 0, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 0, -327688, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -196614, 0, 0, -131077, 0, 0, -131076, 0, 0, -1441833, 0, 0, -1376297, 0, 0, -1310761, 0, 0, -1245225, 0, 0, -1179689, 0, 0, -1114153, 0, 0, -1048617, 0, 0, -983081, 0, 0, -917545, 0, 0, -852009, 0, 0, -786473, 0, 0, -720937, 0, 0, -655401, 0, 0, -589865, 0, 0, -524329, 0, 0, -458793, 0, 0, -393257, 0, 0, -327721, 0, 0, -262185, 0, 0, -196649, 0, 0, -131113, 0, 0, -65577, 0, 0, -41, 0, 0, -1507368, 0, 0, -1376296, 0, 0, -1310760, 0, 0, -1245224, 0, 0, -1179688, 0, 0, -1114152, 0, 0, -1048616, 0, 0, -983080, 0, 0, -917544, 0, 0, -852008, 0, 0, -786472, 0, 0, -720936, 0, 0, -655400, 0, 0, -589864, 0, 0, -524328, 0, 0, -458792, 0, 0, -393256, 0, 0, -327720, 0, 0, -262184, 0, 0, -196648, 0, 0, -131112, 0, 0, -65576, 0, 0, -40, 0, 0, -1507367, 0, 0, -1441831, 0, 0, -1310759, 0, 0, -1245223, 0, 0, -1179687, 0, 0, -1114151, 0, 0, -1048615, 0, 0, -983079, 0, 0, -917543, 0, 0, -852007, 0, 0, -786471, 0, 0, -720935, 0, 0, -655399, 0, 0, -589863, 0, 0, -524327, 0, 0, -458791, 0, 0, -393255, 0, 0, -327719, 0, 0, -262183, 0, 0, -196647, 0, 0, -131111, 0, 0, -65575, 0, 0, -39, 0, 0, -1507366, 0, 0, -1441830, 0, 0, -1376294, 0, 0, -1245222, 0, 0, -1179686, 0, 0, -1114150, 0, 0, -1048614, 0, 0, -983078, 0, 0, -917542, 0, 0, -852006, 0, 0, -786470, 0, 0, -720934, 0, 0, -655398, 0, 0, -589862, 0, 0, -524326, 0, 0, -458790, 0, 0, -393254, 0, 0, -327718, 0, 0, -262182, 0, 0, -196646, 0, 0, -131110, 0, 0, -65574, 0, 0, -38, 0, 0, -1507365, 0, 0, -1441829, 0, 0, -1376293, 0, 0, -1245221, 0, 0, -1179685, 0, 0, -1114149, 0, 0, -1048613, 0, 0, -983077, 0, 0, -917541, 0, 0, -852005, 0, 0, -786469, 0, 0, -720933, 0, 0, -655397, 0, 0, -589861, 0, 0, -524325, 0, 0, -458789, 0, 0, -393253, 0, 0, -327717, 0, 0, -262181, 0, 0, -196645, 0, 0, -131109, 0, 0, -65573, 0, 0, -37, 0, 0, -1507364, 0, 0, -1441828, 0, 0, -1376292, 0, 0, -1310756, 0, 0, -1179684, 0, 0, -1114148, 0, 0, -1048612, 0, 0, -983076, 0, 0, -917540, 0, 0, -852004, 0, 0, -786468, 0, 0, -720932, 0, 0, -655396, 0, 0, -589860, 0, 0, -524324, 0, 0, -458788, 0, 0, -393252, 0, 0, -327716, 0, 0, -262180, 0, 0, -196644, 0, 0, -131108, 0, 0, -65572, 0, 0, -36, 0, 0, -983075, 0, 0, -917539, 0, 0, -852003, 0, 0, -786467, 0, 0, -720931, 0, 0, -655395, 0, 0, -589859, 0, 0, -524323, 0, 0, -458787, 0, 0, -393251, 0, 0, -327715, 0, 0, -262179, 0, 0, -196643, 0, 0, -131107, 0, 0, -65571, 0, 0, -35, 0, 0, -1507362, 65536, 1, -1441826, 65536, 1, -1376290, 65536, 1, -1310754, 65536, 1, -1245218, 65536, 1, -1179682, 65536, 1, -1048610, 65536, 1, -983074, 65536, 1, -917538, 65536, 1, -852002, 65536, 1, -786466, 65536, 1, -720930, 65536, 1, -655394, 0, 0, -589858, 0, 0, -524322, 0, 0, -458786, 0, 0, -393250, 0, 0, -327714, 0, 0, -262178, 0, 0, -196642, 0, 0, -131106, 0, 0, -65570, 0, 0, -34, 0, 0, -1507361, 0, 0, -1441825, 0, 0, -1376289, 0, 0, -1310753, 0, 0, -1245217, 0, 0, -1179681, 0, 0, -1114145, 0, 0, -983073, 0, 0, -917537, 0, 0, -852001, 0, 0, -786465, 0, 0, -720929, 65536, 1, -655393, 0, 0, -589857, 0, 0, -524321, 0, 0, -458785, 0, 0, -393249, 0, 0, -327713, 0, 0, -262177, 0, 0, -196641, 0, 0, -131105, 0, 0, -65569, 0, 0, -33, 0, 0, -1507360, 0, 0, -1441824, 0, 0, -1376288, 0, 0, -1310752, 0, 0, -1245216, 0, 0, -1179680, 0, 0, -1114144, 0, 0, -1048608, 0, 0, -917536, 0, 0, -852000, 0, 0, -786464, 0, 0, -720928, 65536, 1, -655392, 0, 0, -589856, 0, 0, -524320, 0, 0, -458784, 0, 0, -393248, 0, 0, -327712, 0, 0, -262176, 0, 0, -196640, 0, 0, -131104, 0, 0, -65568, 0, 0, -32, 0, 0, -1507359, 0, 0, -1441823, 0, 0, -1376287, 0, 0, -1310751, 0, 0, -1245215, 0, 0, -1179679, 0, 0, -1114143, 0, 0, -1048607, 0, 0, -983071, 0, 0, -851999, 0, 0, -786463, 0, 0, -720927, 65536, 1, -655391, 0, 0, -589855, 0, 0, -524319, 0, 0, -458783, 0, 0, -393247, 0, 0, -327711, 0, 0, -262175, 0, 0, -196639, 0, 0, -131103, 0, 0, -65567, 0, 0, -31, 0, 0, -1507358, 0, 0, -1441822, 0, 0, -1376286, 0, 0, -1310750, 0, 0, -1245214, 0, 0, -1179678, 0, 0, -1114142, 0, 0, -1048606, 0, 0, -983070, 0, 0, -851998, 0, 0, -786462, 0, 0, -720926, 65536, 1, -655390, 0, 0, -589854, 0, 0, -524318, 0, 0, -458782, 0, 0, -393246, 0, 0, -327710, 0, 0, -262174, 0, 0, -196638, 0, 0, -131102, 0, 0, -65566, 0, 0, -30, 0, 0, -1507357, 0, 0, -1441821, 0, 0, -1376285, 0, 0, -1310749, 0, 0, -1245213, 0, 0, -1179677, 0, 0, -1114141, 0, 0, -1048605, 0, 0, -983069, 0, 0, -917533, 0, 0, -786461, 0, 0, -720925, 65536, 1, -655389, 0, 0, -589853, 0, 0, -524317, 0, 0, -458781, 0, 0, -393245, 0, 0, -327709, 0, 0, -262173, 0, 0, -196637, 0, 0, -131101, 0, 0, -65565, 0, 0, -29, 0, 0, -1507356, 0, 0, -1441820, 0, 0, -1376284, 0, 0, -1310748, 0, 0, -1245212, 0, 0, -1179676, 0, 0, -1114140, 0, 0, -1048604, 0, 0, -983068, 0, 0, -917532, 0, 0, -786460, 0, 0, -720924, 65536, 1, -655388, 0, 0, -589852, 0, 0, -524316, 0, 0, -458780, 0, 0, -393244, 0, 0, -327708, 0, 0, -262172, 0, 0, -196636, 0, 0, -131100, 0, 0, -65564, 0, 0, -28, 0, 0, -1507355, 0, 0, -1441819, 0, 0, -1376283, 0, 0, -1310747, 0, 0, -1245211, 0, 0, -1179675, 0, 0, -1114139, 0, 0, -1048603, 0, 0, -983067, 0, 0, -917531, 0, 0, -851995, 0, 0, -720923, 65536, 1, -655387, 0, 0, -589851, 0, 0, -524315, 0, 0, -458779, 0, 0, -393243, 0, 0, -327707, 0, 0, -262171, 0, 0, -196635, 0, 0, -131099, 0, 0, -65563, 0, 0, -27, 0, 0, -1507354, 0, 0, -1441818, 0, 0, -1376282, 0, 0, -1310746, 0, 0, -1245210, 0, 0, -1179674, 0, 0, -1114138, 0, 0, -1048602, 0, 0, -983066, 0, 0, -917530, 0, 0, -851994, 0, 0, -720922, 65536, 1, -655386, 0, 0, -589850, 0, 0, -524314, 0, 0, -458778, 0, 0, -393242, 0, 0, -327706, 0, 0, -262170, 0, 0, -196634, 0, 0, -131098, 0, 0, -65562, 0, 0, -26, 0, 0, -1507353, 0, 0, -1441817, 0, 0, -1376281, 0, 0, -1310745, 0, 0, -1245209, 0, 0, -1179673, 0, 0, -1114137, 0, 0, -1048601, 0, 0, -983065, 0, 0, -917529, 0, 0, -851993, 0, 0, -786457, 0, 0, -655385, 0, 0, -589849, 0, 0, -524313, 0, 0, -458777, 0, 0, -393241, 0, 0, -327705, 0, 0, -262169, 0, 0, -196633, 0, 0, -131097, 0, 0, -65561, 0, 0, -25, 0, 0, -1507352, 0, 0, -1441816, 0, 0, -1376280, 0, 0, -1310744, 0, 0, -1245208, 0, 0, -1179672, 0, 0, -1114136, 0, 0, -1048600, 0, 0, -983064, 0, 0, -917528, 0, 0, -851992, 0, 0, -786456, 0, 0, -655384, 0, 0, -589848, 0, 0, -524312, 0, 0, -458776, 0, 0, -393240, 0, 0, -327704, 0, 0, -262168, 0, 0, -196632, 0, 0, -131096, 0, 0, -65560, 0, 0, -24, 0, 0, -1507351, 0, 0, -1441815, 0, 0, -1376279, 0, 0, -1310743, 0, 0, -1245207, 0, 0, -1179671, 0, 0, -1114135, 0, 0, -1048599, 0, 0, -983063, 0, 0, -917527, 0, 0, -851991, 0, 0, -786455, 0, 0, -720919, 65536, 1, -589847, 0, 0, -524311, 0, 0, -458775, 0, 0, -393239, 0, 0, -327703, 0, 0, -262167, 0, 0, -196631, 0, 0, -131095, 0, 0, -65559, 0, 0, -23, 0, 0, -1507350, 0, 0, -1441814, 0, 0, -1376278, 0, 0, -1310742, 0, 0, -1245206, 0, 0, -1179670, 0, 0, -1114134, 0, 0, -1048598, 0, 0, -983062, 0, 0, -917526, 0, 0, -851990, 0, 0, -786454, 0, 0, -720918, 65536, 1, -589846, 0, 0, -524310, 0, 0, -458774, 0, 0, -393238, 0, 0, -327702, 0, 0, -262166, 0, 0, -196630, 0, 0, -131094, 0, 0, -65558, 0, 0, -22, 0, 0, -1507349, 0, 0, -1441813, 0, 0, -1376277, 0, 0, -1310741, 0, 0, -1245205, 0, 0, -1179669, 0, 0, -1114133, 0, 0, -1048597, 0, 0, -983061, 0, 0, -917525, 0, 0, -851989, 0, 0, -786453, 0, 0, -720917, 65536, 1, -655381, 0, 0, -524309, 0, 0, -458773, 0, 0, -393237, 0, 0, -327701, 0, 0, -262165, 0, 0, -196629, 0, 0, -131093, 0, 0, -65557, 0, 0, -21, 0, 0, -1507348, 0, 0, -1441812, 0, 0, -1376276, 0, 0, -1310740, 0, 0, -1245204, 0, 0, -1179668, 65536, 1, -1114132, 65536, 1, -1048596, 65536, 1, -983060, 65536, 1, -917524, 65536, 1, -851988, 65536, 1, -786452, 65536, 1, -720916, 65536, 1, -655380, 0, 0, -524308, 0, 0, -458772, 0, 0, -393236, 0, 0, -327700, 0, 0, -262164, 0, 0, -196628, 0, 0, -131092, 0, 0, -65556, 0, 0, -20, 0, 0, -1507347, 0, 0, -1441811, 0, 0, -1376275, 0, 0, -1310739, 0, 0, -1245203, 0, 0, -1179667, 65536, 1, -1114131, 0, 0, -1048595, 0, 0, -983059, 0, 0, -917523, 0, 0, -851987, 0, 0, -786451, 0, 0, -720915, 0, 0, -655379, 0, 0, -589843, 0, 0, -458771, 0, 0, -393235, 0, 0, -327699, 0, 0, -262163, 0, 0, -196627, 0, 0, -131091, 0, 0, -65555, 0, 0, -19, 0, 0, -1507346, 0, 0, -1441810, 0, 0, -1376274, 0, 0, -1310738, 0, 0, -1245202, 0, 0, -1179666, 65536, 1, -1114130, 0, 0, -1048594, 0, 0, -983058, 0, 0, -917522, 0, 0, -851986, 0, 0, -786450, 0, 0, -720914, 0, 0, -655378, 0, 0, -589842, 0, 0, -458770, 0, 0, -393234, 0, 0, -327698, 0, 0, -262162, 0, 0, -196626, 0, 0, -131090, 0, 0, -65554, 0, 0, -18, 0, 0, -1507345, 0, 0, -1441809, 0, 0, -1376273, 0, 0, -1310737, 0, 0, -1245201, 0, 0, -1179665, 65536, 1, -1114129, 0, 0, -1048593, 0, 0, -983057, 0, 0, -917521, 0, 0, -851985, 0, 0, -786449, 0, 0, -720913, 0, 0, -655377, 0, 0, -589841, 0, 0, -458769, 0, 0, -393233, 0, 0, -327697, 0, 0, -262161, 0, 0, -196625, 0, 0, -131089, 0, 0, -65553, 0, 0, -17, 0, 0, -1507344, 0, 0, -1441808, 0, 0, -1376272, 0, 0, -1310736, 0, 0, -1245200, 0, 0, -1179664, 65536, 1, -1114128, 0, 0, -1048592, 0, 0, -983056, 0, 0, -917520, 0, 0, -851984, 0, 0, -786448, 0, 0, -720912, 0, 0, -655376, 0, 0, -589840, 0, 0, -524304, 0, 0, -393232, 0, 0, -327696, 0, 0, -262160, 0, 0, -196624, 0, 0, -131088, 0, 0, -65552, 0, 0, -16, 0, 0, -1507343, 0, 0, -1441807, 0, 0, -1376271, 0, 0, -1310735, 0, 0, -1245199, 0, 0, -1179663, 65536, 1, -1114127, 0, 0, -1048591, 0, 0, -983055, 0, 0, -917519, 0, 0, -851983, 0, 0, -786447, 0, 0, -720911, 0, 0, -655375, 0, 0, -589839, 0, 0, -524303, 0, 0, -393231, 0, 0, -327695, 0, 0, -262159, 0, 0, -196623, 0, 0, -131087, 0, 0, -65551, 0, 0, -15, 0, 0, -1507342, 0, 0, -1441806, 0, 0, -1376270, 0, 0, -1310734, 0, 0, -1245198, 0, 0, -1179662, 65536, 1, -1114126, 0, 0, -1048590, 0, 0, -983054, 0, 0, -917518, 0, 0, -851982, 0, 0, -786446, 0, 0, -720910, 0, 0, -655374, 0, 0, -589838, 0, 0, -524302, 0, 0, -458766, 0, 0, -327694, 0, 0, -262158, 0, 0, -196622, 0, 0, -131086, 0, 0, -65550, 0, 0, -14, 0, 0, -1507341, 0, 0, -1441805, 0, 0, -1376269, 0, 0, -1310733, 0, 0, -1245197, 0, 0, -1179661, 65536, 1, -1114125, 0, 0, -1048589, 0, 0, -983053, 0, 0, -917517, 0, 0, -851981, 0, 0, -786445, 0, 0, -720909, 0, 0, -655373, 0, 0, -589837, 0, 0, -524301, 0, 0, -458765, 0, 0, -327693, 0, 0, -262157, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, -1507340, 0, 0, -1441804, 0, 0, -1376268, 0, 0, -1310732, 0, 0, -1245196, 0, 0, -1179660, 65536, 1, -1114124, 0, 0, -1048588, 0, 0, -983052, 0, 0, -917516, 0, 0, -851980, 0, 0, -786444, 0, 0, -720908, 0, 0, -655372, 0, 0, -589836, 0, 0, -524300, 0, 0, -458764, 0, 0, -327692, 0, 0, -262156, 0, 0, -196620, 0, 0, -131084, 0, 0, -65548, 0, 0, -12, 0, 0, -1507339, 0, 0, -1441803, 0, 0, -1376267, 0, 0, -1310731, 0, 0, -1245195, 0, 0, -1179659, 65536, 1, -1114123, 0, 0, -1048587, 0, 0, -983051, 0, 0, -917515, 0, 0, -851979, 0, 0, -786443, 0, 0, -720907, 0, 0, -655371, 0, 0, -589835, 0, 0, -524299, 0, 0, -458763, 0, 0, -393227, 0, 0, -262155, 0, 0, -196619, 0, 0, -131083, 0, 0, -65547, 0, 0, -11, 0, 0, -1507338, 0, 0, -1441802, 0, 0, -1376266, 0, 0, -1310730, 0, 0, -1245194, 0, 0, -1179658, 65536, 1, -1114122, 0, 0, -1048586, 0, 0, -983050, 0, 0, -917514, 0, 0, -851978, 0, 0, -786442, 0, 0, -720906, 0, 0, -655370, 0, 0, -589834, 0, 0, -524298, 0, 0, -458762, 0, 0, -393226, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, -1507337, 0, 0, -1441801, 0, 0, -1376265, 0, 0, -1310729, 0, 0, -1245193, 0, 0, -1179657, 65536, 1, -1114121, 65536, 1, -1048585, 65536, 1, -983049, 65536, 1, -917513, 65536, 1, -851977, 65536, 1, -786441, 0, 0, -720905, 0, 0, -655369, 0, 0, -589833, 0, 0, -524297, 0, 0, -458761, 0, 0, -393225, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, -1507336, 0, 0, -1441800, 0, 0, -1376264, 0, 0, -1310728, 0, 0, -1245192, 0, 0, -1179656, 0, 0, -1114120, 0, 0, -1048584, 0, 0, -983048, 0, 0, -917512, 0, 0, -851976, 65536, 1, -786440, 0, 0, -720904, 0, 0, -655368, 0, 0, -589832, 0, 0, -524296, 0, 0, -458760, 0, 0, -393224, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, -1507335, 0, 0, -1441799, 0, 0, -1376263, 0, 0, -1310727, 0, 0, -1245191, 0, 0, -1179655, 0, 0, -1114119, 0, 0, -1048583, 0, 0, -983047, 0, 0, -917511, 0, 0, -851975, 65536, 1, -786439, 0, 0, -720903, 0, 0, -655367, 0, 0, -589831, 0, 0, -524295, 0, 0, -458759, 0, 0, -393223, 0, 0, -327687, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, -1507334, 0, 0, -1441798, 0, 0, -1376262, 0, 0, -1310726, 0, 0, -1245190, 0, 0, -1179654, 0, 0, -1114118, 0, 0, -1048582, 0, 0, -983046, 0, 0, -917510, 0, 0, -851974, 65536, 1, -786438, 0, 0, -720902, 0, 0, -655366, 0, 0, -589830, 0, 0, -524294, 0, 0, -458758, 0, 0, -393222, 0, 0, -327686, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, -1507333, 0, 0, -1441797, 0, 0, -1376261, 0, 0, -1310725, 0, 0, -1245189, 0, 0, -1179653, 0, 0, -1114117, 0, 0, -1048581, 0, 0, -983045, 0, 0, -917509, 0, 0, -851973, 65536, 1, -786437, 0, 0, -720901, 0, 0, -655365, 0, 0, -589829, 0, 0, -524293, 0, 0, -458757, 0, 0, -393221, 0, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -65541, 0, 0, -5, 0, 0, -1507332, 0, 0, -1441796, 0, 0, -1376260, 0, 0, -1310724, 0, 0, -1245188, 0, 0, -1179652, 0, 0, -1114116, 0, 0, -1048580, 0, 0, -983044, 0, 0, -917508, 0, 0, -851972, 65536, 1, -786436, 0, 0, -720900, 0, 0, -655364, 0, 0, -589828, 0, 0, -524292, 0, 0, -458756, 0, 0, -393220, 0, 0, -327684, 0, 0, -262148, 0, 0, -196612, 0, 0, -65540, 0, 0, -4, 0, 0, -1507331, 0, 0, -1441795, 0, 0, -1376259, 0, 0, -1310723, 0, 0, -1245187, 0, 0, -1179651, 0, 0, -1114115, 0, 0, -1048579, 0, 0, -983043, 0, 0, -917507, 0, 0, -851971, 65536, 1, -786435, 0, 0, -720899, 0, 0, -655363, 0, 0, -589827, 0, 0, -524291, 0, 0, -458755, 0, 0, -393219, 0, 0, -327683, 0, 0, -262147, 0, 0, -196611, 0, 0, -131075, 0, 0, -65539, 0, 0, -3, 0, 0, -1507330, 0, 0, -1441794, 0, 0, -1376258, 0, 0, -1310722, 0, 0, -1245186, 0, 0, -1179650, 0, 0, -1114114, 0, 0, -1048578, 0, 0, -983042, 0, 0, -917506, 0, 0, -851970, 65536, 1, -786434, 0, 0, -720898, 0, 0, -655362, 0, 0, -589826, 0, 0, -524290, 0, 0, -458754, 0, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, -1507329, 0, 0, -1441793, 0, 0, -1376257, 0, 0, -1310721, 0, 0, -1245185, 0, 0, -1179649, 0, 0, -1114113, 0, 0, -1048577, 0, 0, -983041, 0, 0, -917505, 0, 0, -851969, 65536, 1, -786433, 0, 0, -720897, 0, 0, -655361, 0, 0, -589825, 0, 0, -524289, 0, 0, -458753, 0, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, -851968, 0, 0, -917504, 65536, 1, -786432, 0, 0, -1441827, 0, 0, -1376291, 0, 0, -1310755, 0, 0, -1245219, 0, 0, -1179683, 0, 0, -1114147, 0, 0, -1048611, 0, 0, -1507363, 0, 0)

[node name="Camera2d" type="Camera2D" parent="."]
position = Vector2(-325, -185)
current = true
zoom = Vector2(3, 3)

[node name="Units" type="Node" parent="."]

[node name="Loup" parent="Units" instance=ExtResource("10_3u7ec")]
position = Vector2(-319, -172)
scale = Vector2(1.5, 1.5)
script = ExtResource("11_w0phj")

[node name="Archer" parent="Units" instance=ExtResource("7_5k768")]
position = Vector2(-330, -188)
scale = Vector2(1.5, 1.5)

[node name="Paladin" parent="Units" instance=ExtResource("8_08tlg")]
position = Vector2(-358, -161)
scale = Vector2(1.5, 1.5)

[node name="Mage" parent="Units" instance=ExtResource("7_e1n3n")]
position = Vector2(-377, -188)
scale = Vector2(1.5, 1.5)

[node name="Soldier" parent="Units" instance=ExtResource("5_vqr24")]
position = Vector2(-426, -172)
scale = Vector2(1.5, 1.5)

[node name="Bard" parent="Units" instance=ExtResource("9_pydge")]
position = Vector2(-373, -243)
scale = Vector2(1.5, 1.5)

[node name="KingsRoad" type="Path2D" parent="."]
curve = SubResource("Curve2D_lxoc7")

[connection signal="choix" from="UI" to="YamsManager" method="_on_ui_choix"]
[connection signal="roll" from="UI" to="." method="_on_ui_roll"]
